# CareLoop

./: .gitignore  CMakeLists.txt  Kconfig  README.md  README_NCS.md  README_PRODUCTION.md  build.sh  prj.conf
boards/: careloop_production.overlay  nrf52840dk_nrf52840.overlay
dts/bindings/sensor/: maxim,max30102.yaml
src/: main.c
src/business/: heart_rate.cpp  hr_filter.cpp
src/business/include/: heart_rate.h  hr_filter.h
src/communication/ble/: ble_advertising.c  ble_connection.c  ble_manager.c  ble_security.c
src/communication/gatt/: gatt_server.c
src/communication/gatt/services/: fall_service.c  system_service.c  vitals_service.c
src/communication/include/: network_config.h
src/communication/include/ble/: ble_advertising.h  ble_connection.h  ble_manager.h  ble_security.h
src/communication/include/gatt/: gatt_common.h  gatt_server.h
src/communication/include/gatt/services/: fall_service.h  system_service.h  vitals_service.h
src/drivers/: Kconfig
src/drivers/sensor/: Kconfig
src/drivers/sensor/max30102/: CMakeLists.txt  Kconfig  max30102.c  max30102.h
src/hal/: hal_sensor.c
src/hal/include/: hal_common.h  hal_max30102.h  hal_mpu6050.h  hal_sensor.h
src/hal/sensor/: hal_max30102.c  hal_mpu6050.c
src/information/: battery.h  firmware_info.h
test/: CMakeLists.txt  hr_filter_ztest.cpp  prj.conf
tools/: design_sos.py
zephyr/: module.yml
